--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "amqplib": "^0.10.4",
     "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
+    "envalid": "^8.0.0",
     "express": "^4.18.1",
-    "tslib": "^2.3.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.1",
+    "tslib": "^2.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nx/eslint": "19.7.2",
@@ -25,6 +31,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "~18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
