--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@app/core": ["libs/core/src/index.ts"],
+      "@app/error": ["libs/error/src/index.ts"],
+      "@app/event": ["libs/event/src/index.ts"],
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
