--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "amqplib": "^0.10.4",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "envalid": "^8.0.0",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "tslib": "^2.3.0",
