--- a/nx.json
+++ b/nx.json
@@ -36,7 +36,12 @@
       "options": {
         "targetName": "test"
       },
-      "exclude": ["apps/user-e2e/**/*", "apps/product-e2e/**/*"]
+      "exclude": [
+        "apps/user-e2e/**/*",
+        "apps/product-e2e/**/*",
+        "apps/payment-e2e/**/*",
+        "apps/order-e2e/**/*"
+      ]
     }
   ],
   "targetDefaults": {
