--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "envalid": "^8.0.0",
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
