--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
+    "swagger-ui-express": "^5.0.1",
     "tslib": "^2.3.0",
+    "yaml": "^2.5.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
