update irder swagger

--- a/apps/order/src/order.swagger.yaml
+++ b/apps/order/src/order.swagger.yaml
@@ -87,6 +87,8 @@ paths:
 
   /{productId}:
     post:
+      security:
+        - bearerAuth: []
       summary: Add product
       description: Add selected product id to cart
       tags: ['order']
