--- a/apps/order/dockerfile
+++ b/apps/order/dockerfile
@@ -21,6 +21,8 @@ RUN npm install --omit=dev
 
 COPY --from=0 /usr/src/app/dist .
 
+COPY --from=0 /usr/src/app/apps/order/src/order.swagger.yaml ./apps/order
+
 EXPOSE 3001
 
 RUN npm install pm2 -g
