--- a/apps/payment/dockerfile
+++ b/apps/payment/dockerfile
@@ -21,6 +21,8 @@ RUN npm install --omit=dev
 
 COPY --from=0 /usr/src/app/dist .
 
+COPY --from=0 /usr/src/app/apps/payment/src/payment.swagger.yaml ./apps/payment/
+
 EXPOSE 3000
 
 RUN npm install pm2 -g
