--- a/apps/payment/src/payment.swagger.yaml
+++ b/apps/payment/src/payment.swagger.yaml
@@ -7,7 +7,7 @@ info:
 servers:
   - url: http://localhost:3000/api/v1/payment
     description: Local Server endpoint for payment service
-  - url: https://.../api/v1/payment
+  - url: https://payment-service-8scu.onrender.com/api/v1/payment
     description: Server endpoint for payment service
 
 paths:
