--- a/apps/product/dockerfile
+++ b/apps/product/dockerfile
@@ -21,6 +21,8 @@ RUN npm install --omit=dev
 
 COPY --from=0 /usr/src/app/dist .
 
+COPY --from=0 /usr/src/app/apps/product/src/product.swagger.yaml ./apps/product
+
 EXPOSE 3003
 
 RUN npm install pm2 -g
