--- a/apps/user/dockerfile
+++ b/apps/user/dockerfile
@@ -21,6 +21,8 @@ RUN npm install --omit=dev
 
 COPY --from=0 /usr/src/app/dist .
 
+COPY --from=0 /usr/src/app/apps/user/src/user.swagger.yaml ./apps/user
+
 EXPOSE 3003
 
 RUN npm install pm2 -g
