--- a/apps/user/src/user.swagger.yaml
+++ b/apps/user/src/user.swagger.yaml
@@ -7,7 +7,7 @@ info:
 servers:
   - url: http://localhost:3003/api/v1/user
     description: Local Server endpoint for user service
-  - url: https://.../api/v1/user
+  - url: https://user-serviice.onrender.com/api/v1/user
     description: Server endpoint for user service
 
 paths:
@@ -26,15 +26,15 @@ paths:
               schema:
                 type: object
                 properties:
-                  message: 
+                  message:
                     type: string
-                  data: 
+                  data:
                     type: object
                     properties:
-                      name: 
+                      name:
                         type: string
                         example: Test
-                      email: 
+                      email:
                         type: string
                         exampe: test@user.com
         '401':
@@ -116,7 +116,7 @@ paths:
                   data:
                     type: object
                     properties:
-                      token: 
+                      token:
                         type: string
         '422':
           description: Validation error
