--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "swagger-ui-express": "^5.0.1",
     "tslib": "^2.3.0",
     "yaml": "^2.5.1",
+    "dotenv": "^16.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
